--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@blueprintjs/core": "^1.11.0",
     "ajv": "^5.0.2-beta.0",
     "axios": "^0.15.2",
+    "bootstrap": "^3.3.7",
     "flexboxgrid": "^6.3.1",
     "js-yaml": "^3.7.0",
     "lodash": "^4.17.4",
